# experimoza

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ai.py  output.txt  pirate.qrc  sdl2.py  ui.py
MOZA_SDK/1.0.1.8/MSVC2022-32/docs/: annotated.html  classes.html  dir_48f9b015b307f842424d236bd4b880c5.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_f45152e5be5332f880f0716b277b5d48.html  functions_b.html  functions_c.html  functions_e.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_n.html  functions_rela.html  functions_s.html  functions_t.html  functions_vars.html  hierarchy.html  menudata.js  namespacemembers.html  namespacemembers_vars.html
MOZA_SDK/1.0.1.8/MSVC2022-32/docsEng/: annotated.html  dir_0dd197046c4f8550b30e5a0aea0f1245.html  dir_48f9b015b307f842424d236bd4b880c5.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_f45152e5be5332f880f0716b277b5d48.html  doxygen_crawl.html  functions.html  functions_b.html  functions_d.html  functions_f.html  functions_func.html  functions_h.html  functions_k.html  functions_m.html  functions_n.html  functions_r.html  functions_s.html  functions_t.html  functions_v.html  functions_w.html  functions_~.html  hierarchy.html  namespacemembers_eval.html  namespaces.html
MOZA_SDK/1.0.1.8/MSVC2022-32/example/: CMakeLists.txt  sdk_api_test.cc  shifter_test.cc  switches_test.cc
MOZA_SDK/1.0.1.8/MSVC2022-32/include/: hid_device.h  switches_device.h
MOZA_SDK/1.0.1.8/MSVC2022-32/lib/: MOZA_SDK.lib
MOZA_SDK/1.0.1.8/MSVC2022-64/docs/: dir_0dd197046c4f8550b30e5a0aea0f1245.html  dir_8ad2fa29a03bf841e8c57341a9f0678b.html  doxygen_crawl.html  functions.html  functions_d.html  functions_f.html  functions_k.html  index.html  (+13 more)
MOZA_SDK/Licenses/: OpenSSL License.txt
MOZA_SDK/SDK_CSharp/AnyCPU/: readme.txt
MOZA_SDK/SDK_CSharp/example/: ShifterTest.cs
py_directinput_ffb/: generated_scene_body.py  main.py  wheel_effect_lab.py
py_directinput_ffb/directinput_ffb/: dinput_effects.py
src/: main.cpp
(+188 files in other folders)
